--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-slate
+title: iExpo Sommer 2021
+description: Die Website zur iExpo der Fakultät für Informatik im Sommersemester 2021
+show_downloads: false
