--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-slate
 title: iExpo Sommer 2021
 description: Online-Messe der Informatik im Sommersemester 2021
 show_downloads: false
+markdown: kramdown
